--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *, ::before, ::after {
   box-sizing: border-box;
   padding: 0;
@@ -20,11 +21,22 @@ body {
   padding: 5px;
 }
 
+.form--error::after {
+  content: "Ошибка!";
+  font-size: 20px;
+  color: red;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
 .form__input {
   display: block;
   width: 250px;
   border: 2px solid #000000;
   margin: 5px 0;
+}
+
+.form__input--error {
+  border-color: red;
 }
 
 .form__label {
